slot changes
