# dto/slots.dto.js
@@ -15,6 +15,18 @@ const GetAvilableSlotsByDoctorIdDTO = async (doctorId) => {
   }
 };
 
+const GetAllSlotsByDoctorIdDTO = async (doctor_id) => {
+  try {
+    const query = DB.QUERY.GET_SLOTS_BY_DOCTOR_ID;
+    const replacements = {doctor_id};
+    const data = await pgsql.query(query, { replacements, type: pgsql.QueryTypes.SELECT});
+    return data;
+  } catch (error) {
+    logger.error({ GetAllSlotsByDoctorIdDTO: error.message });
+    throw new Error(error.message);
+  }
+}
+
 const CheckSlotConflictDTO = async (doctor_id, slot_date, slot_time, slot_end_time) => {
   try {
     const query = DB.QUERY.CHECK_SLOT_CONFLICT;
@@ -39,10 +51,10 @@ const GetSlotBySlotIdDTO = async (slot_id) => {
   }
 };
 
-const CreateSlotsDTO = async (doctor_id, available_slots, slot_date, slot_time, slot_end_time, created_by) => {
+const CreateSlotsDTO = async (description, title, doctor_id, available_slots, slot_date, slot_time, slot_end_time, created_by) => {
   try {
     const query = DB.QUERY.POST_SLOT;
-    const replacements = { doctor_id, available_slots, slot_date, slot_time, slot_end_time, created_by };
+    const replacements = { description, title, doctor_id, available_slots, slot_date, slot_time, slot_end_time, created_by };
     const data = await pgsql.query(query, { replacements, type: pgsql.QueryTypes.INSERT });
     return data;
   } catch (error) {
@@ -69,6 +81,7 @@ const SlotsDTO = {
   CreateSlotsDTO,
   GetSlotBySlotIdDTO,
   UpdateBookedSlotsDTO,
+  GetAllSlotsByDoctorIdDTO,
 };
 
 export default SlotsDTO;
