# routes/index.routes.js
@@ -17,18 +17,39 @@ const Router = express.Router();
 
 Router.get('/auth', validators.loginValidation, AuthController.GetAuthController);
 Router.post('/add', AuthController.AddNewUser);
-Router.post('/appointments/guest', AppointementValidations.validateAppointmentCreation, AppointmentsController.AddAppointmentController);
+Router.post(
+  '/appointments/guest',
+  AppointementValidations.validateAppointmentCreation,
+  AppointmentsController.AddAppointmentController,
+);
 Router.get('/employee/auth', employeeValidations.employeeAuthValidators, EmployeeController.GetEmployeeAuthController);
 Router.get('/doctors/auth', DoctorValidations.DoctorAuth, DoctorsControllers.GetDoctorAuthControllers);
 Router.get('/doctors/all', DoctorsControllers.GetAllDoctorsController);
-Router.get('/slots', SlotsController.GetAvilableSlotsByDoctorIdController);
-Router.get('/appointments/current-queue', AppointementValidations.CheckDoctorId, AppointmentsController.GetCurrentAppointmentQueueController);
+Router.get('/slots', AppointementValidations.CheckDoctorId, SlotsController.GetAvilableSlotsByDoctorIdController);
+Router.get(
+  '/appointments/current-queue',
+  AppointementValidations.CheckDoctorId,
+  AppointmentsController.GetCurrentAppointmentQueueController,
+);
 
 Router.use(JWT.VerifyToken);
 
 Router.post('/employee', employeeValidations.addEmployeeCheck, EmployeeController.AddNewEmployeeController);
 Router.post('/doctors', DoctorValidations.PostDoctor, DoctorsControllers.PostDoctorController);
 Router.post('/slots', SlotsValidations.validateSlotCreation, SlotsController.CreateSlotsController);
-Router.post('/appointments', AppointementValidations.validateAppointmentCreation, AppointmentsController.AddAppointmentController);
-Router.get('/appointments', AppointementValidations.CheckAppointmentDate, AppointmentsController.GetAppointmentsByDateController);
+Router.get(
+  '/slots/doctor',
+  AppointementValidations.CheckDoctorId,
+  SlotsController.GetAvilableSlotsByDoctorIdController,
+);
+Router.post(
+  '/appointments',
+  AppointementValidations.validateAppointmentCreation,
+  AppointmentsController.AddAppointmentController,
+);
+Router.get(
+  '/appointments',
+  AppointementValidations.CheckAppointmentDate,
+  AppointmentsController.GetAppointmentsByDateController,
+);
 export default Router;
